--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,22 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="jumbotron text-center shadow" id="homepage-background"></div>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <h1 class="display-4 jumbo-text text-light">The Stranger Scraper</h1>
+            <hr class="my-4">
+            <a class="btn btn-secondary btn-lg mr-3" href="#" role="button">Scrape New Articles</a>
+            <a class="btn btn-secondary btn-lg" href="#" role="button">Clear Articles</a>
+        </div>
+    </div>
+    <div class="row" id="articles">
+        {{content}}
+        {{#each article}}
+        <div class="col">
+            <div class="card">
+                <h5 class="card-title">{{article.title}}</h5>
+                <div class="card-body">{{article.link}}</div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+</div>
