--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,15 +8,14 @@
             <a class="btn btn-secondary btn-lg" href="#" role="button">Clear Articles</a>
         </div>
     </div>
-    <div class="row" id="articles">
-        {{content}}
-        {{#each article}}
+    {{#each article}}
+    <div class="row">
         <div class="col">
             <div class="card">
-                <h5 class="card-title">{{article.title}}</h5>
-                <div class="card-body">{{article.link}}</div>
+                <h5 class="card-title">{{this.title}}</h5>
+                <div class="card-body">{{this.link}}</div>
             </div>
         </div>
-        {{/each}}
     </div>
+    {{/each}}
 </div>
