--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,46 @@
         <div class="col text-center">
             <h1 class="display-4 jumbo-text text-light">The Stranger Scraper</h1>
             <hr class="my-4">
-            <a class="btn btn-secondary btn-lg mr-3" href="#" role="button">Scrape New Articles</a>
-            <a class="btn btn-secondary btn-lg" href="#" role="button">Clear Articles</a>
+            <a class="btn btn-secondary btn-lg mr-3" href="/" role="button">Scrape New Articles</a>
+            <button type="button" class="btn btn-secondary btn-lg" id="clear-articles">Clear Articles</button
+                type="button">
         </div>
     </div>
-    {{#each article}}
-    <div class="row">
-        <div class="col">
-            <div class="card">
-                <h5 class="card-title">{{this.title}}</h5>
-                <div class="card-body">{{this.link}}</div>
+    <div id="articles">
+        {{#each article}}
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div class="card my-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.title}}</h5>
+                        <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
+                        <button type="button" class="btn btn-secondary" id="save-article">Save Article</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal"
+                            data-target="#noteModal">Take a Note</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="noteModalLabel">Take a Note</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save Note</button>
+                </div>
             </div>
         </div>
     </div>
-    {{/each}}
 </div>
