--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -1,2 +1,48 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="jumbotron text-center shadow" id="homepage-background"></div>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <h1 class="display-4 jumbo-text text-light">Saved Articles</h1>
+            <hr class="my-4">
+        </div>
+    </div>
+    <div id="articles">
+        {{#each article}}
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div class="card my-3">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.title}}</h5>
+                        <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
+                        <button type="button" class="btn btn-secondary note-modal" data-toggle="modal"
+                            data-target="#noteModal" data-title="{{this.title}}" data-link="{{this.link}}">
+                            View Notes
+                        </button>
+                        <button type="button" class="btn btn-danger" id="delete-article" 
+                            data-title="{{this.title}}" data-link="{{this.link}}">Delete Article</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="noteModalLabel">Take a Note</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="save-note">Save Note</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
