--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,33 +17,12 @@
                     <div class="card-body">
                         <h5 class="card-title">{{this.title}}</h5>
                         <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
-                        <button type="button" class="btn btn-secondary" id="save-article">Save Article</button>
-                        <button type="button" class="btn btn-secondary" data-toggle="modal"
-                            data-target="#noteModal">Take a Note</button>
+                        <button type="button" class="btn btn-secondary" id="save-article" 
+                            data-title="{{this.title}}" data-link="{{this.link}}">Save Article</button>
                     </div>
                 </div>
             </div>
         </div>
         {{/each}}
-    </div>
-    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="noteModalLabel">Take a Note</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save Note</button>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
