--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,6 +33,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script src="/javascripts/homePage.js"></script>
+  <script src="/javascripts/savedPage.js"></script>
 </body>
 
 </html>
