API route for saving a new article first checks if the article is already in the database. If it is, it does not save it again.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{this.title}}</h5>
                         <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
-                        <button type="button" class="btn btn-secondary" id="save-article" 
+                        <button type="button" class="btn btn-secondary save-article"
                             data-title="{{this.title}}" data-link="{{this.link}}">Save Article</button>
                     </div>
                 </div>
