--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,12 +17,33 @@
                     <div class="card-body">
                         <h5 class="card-title">{{this.title}}</h5>
                         <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
-                        <button type="button" class="btn btn-secondary save-article"
-                            data-title="{{this.title}}" data-link="{{this.link}}">Save Article</button>
+                        <button type="button" class="btn btn-secondary save-modal" data-toggle="modal"
+                            data-target="#savedModal" data-title="{{this.title}}" data-link="{{this.link}}">
+                            Save Article
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
         {{/each}}
+    </div>
+    <div class="modal fade" id="savedModal" tabindex="-1" role="dialog" aria-labelledby="savedModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="savedModalLabel">Saving...</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-secondary" href="/articles" role="button">View Saved Articles</a>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
