--- a/views/articles.hbs
+++ b/views/articles.hbs
@@ -16,12 +16,12 @@
                         <h5 class="card-title">{{this.title}}</h5>
                         <a href="{{this.link}}" class="btn btn-secondary" target="_blank">Go To Article</a>
                         <button type="button" class="btn btn-secondary note-modal" data-toggle="modal"
-                            data-target="#noteModal" data-id="{{this._id}}" data-title="{{this.title}}" 
+                            data-target="#noteModal" data-id="{{this._id}}" data-title="{{this.title}}"
                             data-link="{{this.link}}">
                             View Notes
                         </button>
-                        <button type="button" class="btn btn-danger delete-article"
-                            data-id="{{this._id}}" data-title="{{this.title}}" data-link="{{this.link}}">
+                        <button type="button" class="btn btn-danger delete-article" data-id="{{this._id}}"
+                            data-title="{{this.title}}" data-link="{{this.link}}">
                             Delete Article
                         </button>
                     </div>
@@ -32,9 +32,11 @@
         {{else}}
         <div class="row justify-content-center">
             <div class="col-8">
-                <div class="card-body">
-                    <h5 class="card-title">You don't have any saved articles yet! Click below to find some.</h5>
-                    <a class="btn btn-secondary btn-lg mr-3" href="/" role="button">View New Articles</a>
+                <div class="card my-3">
+                    <div class="card-body">
+                        <h5 class="card-title">You don't have any saved articles yet! Click below to find some.</h5>
+                        <a class="btn btn-secondary btn-lg mr-3" href="/" role="button">View New Articles</a>
+                    </div>
                 </div>
             </div>
         </div>
