--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
 
 <body class="bg-dark">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Stranger Things Have Been Scraped</a>
+    <a class="navbar-brand" href="/">Stranger Things Have Been Scraped</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
